# bio

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  bio_8h_source.html  buffering_8h_source.html  build  classes.html  dir_34a59815f7f4f2d6ea3d70bda6b36d28.html  dir_34a59815f7f4f2d6ea3d70bda6b36d28.js  dir_4c5c79ce06a4078f8c3137d0f955e30a.html  dir_4c5c79ce06a4078f8c3137d0f955e30a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_740f9cb2a3f5b47e1148c9e4d90d8bf4.html  dir_740f9cb2a3f5b47e1148c9e4d90d8bf4.js  dir_a18918b93668b435612395bbc2e8b82b.html  dir_a18918b93668b435612395bbc2e8b82b.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f584182df4c69fab0b14563b4d535158.html  dir_f584182df4c69fab0b14563b4d535158.js  doc-index.md  file_8h_source.html  files.html  freebsd_2platform_8h_source.html  functions.html  functions_vars.html  group__buffering.html  group__buffering.js  group__coro.html  group__coro.js  group__error.html  group__error.js  group__file.html  group__file.js  group__file__logger.html  (+101 more)
.github/workflows/: build.yml
include/bio/: bio.h  buffering.h  file.h  io.h  log.h  mailbox.h  net.h  queue.h  service.h  timer.h
include/bio/log/: file.h
include/bio/logging/: file.h
samples/: CMakeLists.txt  cls.c  echo.c  handle.c  main.c  service.c  signal.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_5.js  groups_7.js  groups_9.js  groups_b.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  typedefs_0.js  variables_1.js  variables_10.js  variables_11.js  variables_2.js  (+13 more)
src/: CMakeLists.txt  array.c  array.h  bio.c  buffering.c  handle.c  hthread.h  internal.h  log.c  logging.c  mailbox.c  minicoro.c  net.c  scheduler.c  service.c  thread.c  timer.c
src/freebsd/: common.h  file.c  net.c  platform.c  platform.h
src/linux/: common.c  common.h  file.c  net.c  platform.c  platform.h
src/log/: file.c
src/logging/: file.c
src/windows/: common.h  file.c  net.c  net.h  platform.c  platform.h
src/windows/net/: pipe.c  ws.c
tests/: CMakeLists.txt  common.c  common.h  coro.c  file.c  handle.c  logging.c  mailbox.c  main.c  net.c  service.c  thread.c  timer.c
